--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,5 @@ fabric.properties
 !/gradle/wrapper/gradle-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/android,gradle,androidstudio
+
+.DS_Store
