--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,7 @@ obj/
 .idea/gradle.xml
 .idea/jarRepositories.xml
 .idea/navEditor.xml
+compose-reports
 
 # Legacy Eclipse project files
 .cproject
