[MOBTECH-462] bezier compose bom 2025.12.01 업데이트 (#116)
* bezier compose bom 2025.12 업데이트

* sdk change

* 코드래빗 리뷰 반영

* 코드 수정

* 리뷰 반영 - 버전업 가능한한 최신으로 업

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,13 @@
 [versions]
-agp = "8.2.0"
-kotlin = "1.9.0"
-core-ktx = "1.10.1"
+agp = "8.13.2"
+kotlin = "2.1.20"
+core-ktx = "1.17.0"
 junit = "4.13.2"
-androidx-test-ext-junit = "1.1.5"
-espresso-core = "3.5.1"
-lifecycle-runtime-ktx = "2.6.1"
-activity-compose = "1.7.0"
-compose-bom = "2023.08.00"
-compose-compiler = "1.5.1"
+androidx-test-ext-junit = "1.3.0"
+espresso-core = "3.7.0"
+lifecycle-runtime-ktx = "2.10.0"
+activity-compose = "1.12.2"
+compose-bom = "2025.12.01"
 coil = "2.4.0"
 
 [libraries]
@@ -33,4 +32,5 @@ coil-gif = { group = "io.coil-kt", name = "coil-gif", version.ref = "coil" }
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
+composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
